--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
       <version>1.2.17</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.2.0.Final</version>
+    </dependency>
+
 
 
     <dependency>
